--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ argon2-cffi=21.3.0=pyhd3eb1b0_0
 argon2-cffi-bindings=21.2.0=py38hca72f7f_0
 asttokens=2.0.5=pyhd3eb1b0_0
 attrs=21.4.0=pyhd3eb1b0_0
+autograd=1.4=pypi_0
 backcall=0.2.0=pyhd3eb1b0_0
 beautifulsoup4=4.11.1=py38hecd8cb5_0
 blas=1.0=mkl
@@ -13,23 +14,26 @@ bleach=4.1.0=pyhd3eb1b0_0
 bottleneck=1.3.4=py38h67323c0_0
 brotli=1.0.9=hb1e8313_2
 brotlipy=0.7.0=py38h9ed2024_1003
-ca-certificates=2022.4.26=hecd8cb5_0
-certifi=2022.5.18.1=py38hecd8cb5_0
+ca-certificates=2022.6.15=h033912b_0
+certifi=2019.9.11=pypi_0
 cffi=1.15.0=py38hc55c11b_1
 charset-normalizer=2.0.4=pyhd3eb1b0_0
-cplex=22.1=py38_0
+cma=2.7.0=py_0
+cplex=22.1.0.0=pypi_0
 cryptography=37.0.1=py38hf6deb26_0
 cycler=0.11.0=pyhd3eb1b0_0
 dbus=1.13.18=h18a8e69_0
 debugpy=1.5.1=py38he9d5cce_0
 decorator=5.1.1=pyhd3eb1b0_0
 defusedxml=0.7.1=pyhd3eb1b0_0
-docplex=2.23.222=py38_0
+dill=0.3.4=pyhd3eb1b0_0
+docplex=2.23.221=pypi_0
 entrypoints=0.4=py38hecd8cb5_0
 executing=0.8.3=pyhd3eb1b0_0
 expat=2.4.4=he9d5cce_0
 fonttools=4.25.0=pyhd3eb1b0_0
 freetype=2.11.0=hd8bbffd_0
+future=0.18.2=py38_1
 gettext=0.21.0=h7535e17_0
 giflib=5.2.1=haf1e3a3_0
 glib=2.69.1=h8346a28_1
@@ -52,6 +56,7 @@ jupyter_console=6.4.3=pyhd3eb1b0_0
 jupyter_core=4.10.0=py38hecd8cb5_0
 jupyterlab_pygments=0.1.2=py_0
 jupyterlab_widgets=1.0.0=pyhd3eb1b0_1
+kaleido-core=0.2.1=h0d85af4_0
 kiwisolver=1.3.2=py38he9d5cce_0
 lcms2=2.12=hf1fd2bf_0
 libcxx=12.0.0=h2f01273_0
@@ -67,6 +72,7 @@ libxml2=2.9.12=hbf8cd5e_2
 llvm-openmp=12.0.0=h0dcd299_1
 lz4-c=1.9.3=h23ab428_1
 markupsafe=2.0.1=py38h9ed2024_0
+mathjax=2.7.7=0
 matplotlib=3.5.1=py38hecd8cb5_1
 matplotlib-base=3.5.1=py38hfb0c5b7_1
 matplotlib-inline=0.1.2=pyhd3eb1b0_2
@@ -75,6 +81,7 @@ mkl=2021.4.0=hecd8cb5_637
 mkl-service=2.4.0=py38h9ed2024_0
 mkl_fft=1.3.1=py38h4ab4a9b_0
 mkl_random=1.2.2=py38hb2f4e1b_0
+multiprocess=0.70.12.2=py38h9ed2024_0
 munkres=1.1.4=py_0
 nbclient=0.5.13=py38hecd8cb5_0
 nbconvert=6.4.4=py38hecd8cb5_0
@@ -86,7 +93,7 @@ notebook=6.4.8=py38hecd8cb5_0
 numexpr=2.8.1=py38h2e5f0a9_0
 numpy=1.21.5=py38h2e5f0a9_1
 numpy-base=1.21.5=py38h3b1a694_1
-openssl=1.1.1o=hca72f7f_0
+openssl=1.1.1q=hfe4f2af_0
 packaging=21.3=pyhd3eb1b0_0
 pandas=1.4.2=py38he9d5cce_0
 pandocfilters=1.5.0=pyhd3eb1b0_0
@@ -104,6 +111,7 @@ ptyprocess=0.7.0=pyhd3eb1b0_2
 pure_eval=0.2.2=pyhd3eb1b0_0
 pycparser=2.21=pyhd3eb1b0_0
 pygments=2.11.2=pyhd3eb1b0_0
+pymoo=0.5.0=py38h4221b65_1
 pyopenssl=22.0.0=pyhd3eb1b0_0
 pyparsing=3.0.4=pyhd3eb1b0_0
 pyqt=5.9.2=py38h655552a_2
@@ -112,6 +120,8 @@ pysocks=1.7.1=py38_1
 python=3.8.13=hdfd78df_0
 python-dateutil=2.8.2=pyhd3eb1b0_0
 python-fastjsonschema=2.15.1=pyhd3eb1b0_0
+python-kaleido=0.2.1=pyhd8ed1ab_0
+python_abi=3.8=2_cp38
 pytz=2021.3=pyhd3eb1b0_0
 pyzmq=22.3.0=py38he9d5cce_2
 qt=5.9.7=h468cd18_1
@@ -124,7 +134,7 @@ scipy=1.7.3=py38h8c7af03_0
 send2trash=1.8.0=pyhd3eb1b0_1
 setuptools=61.2.0=py38hecd8cb5_0
 sip=4.19.8=py38h0a44026_0
-six=1.16.0=pyhd3eb1b0_1
+six=1.12.0=pypi_0
 soupsieve=2.3.1=pyhd3eb1b0_0
 sqlite=3.38.3=h707629a_0
 stack_data=0.2.0=pyhd3eb1b0_0
